popup.css
:root {
	--green-light: #d0f0d0;
	--green-dark: #080;
	--red-light: #f8d0d0;
	--grey: #ccc;
	--text-dark: #fff;
}

table {
	background: var(--red-light);
	border-spacing: 0;
}
th, td {
	position: relative;
	border: 1px solid #fff;
	min-width: 2.4em;
	line-height: 1.8;
	text-align: center;
	font-weight: normal;
}
th:first-child {
	text-align: right;
}
td.disabled {
	background-color: var(--grey);
}

input {
	appearance: none;
	position: absolute;
	top: 0;
	bottom: 0;
	left: 0;
	right: 0;
	margin: 0;
	cursor: pointer;
}
input:focus-visible {
	outline: 2px solid;
}
.inherit-allow {
	background: var(--green-light);
}
input:checked {
	background: var(--green-dark);
}
input ~ span {
	pointer-events: none;
	position: relative;
	z-index: 1;
}
input:checked ~ span {
	color: var(--text-dark);
}

